1998-07-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Let the user start in module `(guile-repl)' instead
	of module `(guile)'.  Also make sure that `(guile-repl)' uses
	suitable modules.  This change improves Guile stability
	substantially since bindings will only be copied from the root
	module: If the user redefines builtins in `(guile-repl)' it won't
	affect the internal operation of Guile itself.

1998-06-19  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (load-module): When loading files from within files
	themselves being loaded: Use the directory path of the file being
	loaded as root for relative filenames.  (After suggestion by
	Steven G. Johnson.)

1998-06-15  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): New feature: Eval in specified module.

1998-06-14  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm: Typo in regex module name.

1998-06-13  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.scm (apropos-completion-function): regexp-quote text to
	be completed.

1998-06-11  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.scm, emacs.scm: Bugfix: Treat `the-last-stack' as a fluid.

1998-06-09  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm: Check that (current-input-port) is a tty before
	enabling readline.  (Thanks to Michael N. Livshin.)

1998-06-07  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (use-syntax): Turned into a macro inorder to be
	similar in use to `use-modules'.
	Example: (use-syntax (ice-9 syncase)) will 1. load the module
	(ice-9 syncase), and, 2. install the procedure `syncase' as eval
	transformer.
	(internal-use-syntax): New procedure.
	(process-define-module): Use `internal-use-syntax'.

1998-05-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am (ice9_sources): Add emacs.scm.

1998-05-13  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm: Use the new readline facilities: Add the